Skip to content

Mpeg-2 files inside MKV from makemkv not decoded correctly with hw decoding

VLC Ver.: vlc-2.2.6-win32 Work properly vlc-3.0.0-20171012-0500-git-win64 Not work properly

Bug: Black sheer, artefact on MKV files.

Screen: Vob files comparison https://imgur.com/fECSNH3 Vob files convert to MKV via MakeMKV 1.10.7 comparison https://imgur.com/8kKqy1k

Other Info: My first ticket sorry if I did something wrong.

https://streams.videolan.org/issues/18916/

Edited by Jean-Baptiste Kempf
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information