demux:mkv: detect bogus MPEG-2 framing from MakeMKV

This software doesn't put mpeg-2 frames properly in mkv frames. Without a
packetizer we get a lot of decoding issues.

Fixes #18916