modules/demux/mkv/matroska_segment_parse.cpp
@@ -1517,6 +1517,8 @@ bool matroska_segment_c::TrackInit( mkv_track_t * p_tk )
         }
         S_CASE("V_MPEG2") {
             vars.p_fmt->i_codec = VLC_CODEC_MPGV;
+            if (strstr(vars.obj->psz_muxing_application,"libmakemkv"))
+                vars.p_fmt->b_packetized = false;
             fill_extra_data( vars.p_tk, 0 );
         }
         S_CASE("V_THEORA") {
